--- a/autoform.bootstrap.minicolors.html
+++ b/autoform.bootstrap.minicolors.html
@@ -1,3 +1,3 @@
 <template name="afBootstrapMinicolors">
-  <input type="text" value="{{this.value}}" class="form-control" {{this.atts}}/>
+  <input type="text" value="{{this.value}}" {{atts}}/>
 </template>
